--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.1",
+    "react-barcode": "^1.4.1",
     "recharts": "^3.7.0",
     "redux-persist": "^6.0.0"
   },
